--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="dba">
     <header class="dba-header">
         <div class="dba-container">
-          <h1 class="dba-logo">Anmol's Portfolio</h1>
+          <h1 class="dba-logo">Designs by <span>Anmol</span></h1>
           <nav class="dba-nav">
             <ul>
               <li><a href="#home">Home</a></li>
