--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#contact" class="dba-cta-btn">Let’s Work Together</a>
           </div>
           <div class="dba-hero-img">
-            <img src="https://via.placeholder.com/400" alt="Designer at Work" />
+            <img src="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@main/assets/images/banner-portfolio.webp" alt="Designer at Work" />
           </div>
         </div>
       </section>
