--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1 class="dba-logo">Designs by <span>Anmol</span></h1>
           <nav class="dba-nav">
             <ul>
-              <li><a href="#home">Home</a></li>
+              <li><a href="#home" class="active">Home</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#about">About Me</a></li>
