--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
       <div class="dba-container">
         <p>© Anmol 2025. All rights reserved.</p>
         <div class="dba-socials">
-          <a href="#">LinkedIn</a>
-          <a href="#">GitHub</a>
-          <a href="#">Behance</a>
+          <a href="#" class="dba_f-linkedin"></a>
+          <a href="#" class="dba_f-insta"></a>
+          <a href="#" class="dba_f-gmail"></a>
         </div>
       </div>
     </footer>
