--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header class="dba-header">
       <div class="dba-container">
         <h1 class="dba-logo">Designs by <span>Anmol</span></h1>
+        <span class="dba-h_menu-icon"></span>
         <nav class="dba-nav">
           <ul>
             <li><a href="#home" class="active">Home</a></li>
@@ -53,7 +54,7 @@
     </section>
 
     <!-- Portfolio -->
-    <section id="portfolio" class="dba-section">
+    <!-- <section id="portfolio" class="dba-section">
       <div class="dba-container">
         <h2>Works & Projects</h2>
         <div class="dba-search">
@@ -65,7 +66,7 @@
         </div>
         <div id="dba-project-list" class="dba-grid"></div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About Me -->
     <section id="about" class="dba-section">
@@ -82,12 +83,12 @@
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonials" class="dba-section">
+    <!-- <section id="testimonials" class="dba-section">
       <div class="dba-container">
         <h2>What Clients Say?</h2>
         <div id="dba-testimonial-list" class="dba-testimonials"></div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
     <section id="contact" class="dba-section">
