linked cdn style jquery

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Designs By Anmol</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@main/style.css">
   </head>
   <body class="dba">
     <header class="dba-header">
@@ -151,7 +151,6 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@main/script.js"></script>
   </body>
 </html>
