id in header added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@main/style.css">
   </head>
   <body class="dba">
-    <header class="dba-header">
+    <header class="dba-header" id="dba-header">
       <div class="dba-container">
         <h1 class="dba-logo">Designs by <span>Anmol</span></h1>
         <span class="dba-h_menu-icon"></span>
