--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="dba">
     <header class="dba-header" id="dba-header">
       <div class="dba-container">
-        <h1 class="dba-logo">Designs by <span>Anmol</span></h1>
+        <h1 class="dba-logo"><i></i>Designs by <span>Anmol</span></h1>
         <span class="dba-h_menu-icon"></span>
         <nav class="dba-nav">
           <ul>
