--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Designs By Anmol.</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@d5c9c41/style.css?v=2">
+    <title>Designs By Anmol</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/designsbyanmol/portfolio@d96cd75/style.css">
   </head>
   <body class="dba">
     <header class="dba-header" id="dba-header">
